--- a/frontend/src/app/modules/admin/locations/map-dialog/map-dialog.component.html
+++ b/frontend/src/app/modules/admin/locations/map-dialog/map-dialog.component.html
@@ -1,8 +1,6 @@
-
 <h1>Maps</h1>
-
-<agm-map [latitude]="mapInfo.lat" [longitude]="mapInfo.lat">
-    <agm-marker [latitude]="mapInfo.lat" [longitude]="mapInfo.lng">
+<agm-map [latitude]="lat" [longitude]="lng">
+    <agm-marker [latitude]="lat" [longitude]="lng">
     </agm-marker>
 </agm-map>
 
