--- a/frontend/src/app/modules/admin/notes/list/list.component.html
+++ b/frontend/src/app/modules/admin/notes/list/list.component.html
@@ -14,7 +14,7 @@
 
     <ng-container matColumnDef="account">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Account </th>
-      <td mat-cell *matCellDef="let row"> {{row.account}} </td>
+      <td mat-cell *matCellDef="let row"> {{row.account?.firstName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="title">
